--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -8,4 +8,4 @@ spec:
   - name: potato
     image: registry.madlabs.com.br/potato:{{TAG}}
   imagePullSecrets:
-  - name: madlabsregistry
+  - name: dockerregistry-credential
