--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: {{PROJECT_NAME}}
+---
+apiVersion: v1
 kind: Secret
 metadata:
   name: madlabsregistry-credential
