--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{PROJECT_NAME}}
+  name: {{BRANCH}}-{{PROJECT_NAME}}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: madlabsregistry-credential
-  namespace: {{PROJECT_NAME}}
+  namespace: {{BRANCH}}-{{PROJECT_NAME}}
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: ewoJImF1dGhzIjogewoJCSJyZWdpc3RyeS5tYWRsYWJzLmNvbS5iciI6IHsKCQkJImF1dGgiOiAiZFhObGNsOXlaV2RwYzNSeWVUcGxNMGdqUUNGZk4wMVBMa29zUTJNNGVsVXlNUzFqIgoJCX0KCX0KfQ== ### config.json in base64
@@ -16,7 +16,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{PROJECT_NAME}}
-  namespace: {{PROJECT_NAME}}
+  namespace: {{BRANCH}}-{{PROJECT_NAME}}
 spec:
   replicas: 2
   selector:
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
         - name: registry
-          image: registry.madlabs.com.br/{{PROJECT_NAME}}:{{TAG}}
+          image: registry.madlabs.com.br/{{PROJECT_NAME}}:{{BRANCH}}-{{TAG}}
           resources:
             limits:
               memory: "128Mi"
@@ -49,7 +49,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{PROJECT_NAME}}
-  namespace: {{PROJECT_NAME}}
+  namespace: {{BRANCH}}-{{PROJECT_NAME}}
 spec:
   ports:
     - name: http
@@ -57,32 +57,3 @@ spec:
       targetPort: http
   selector:
     app: {{PROJECT_NAME}}
----
-apiVersion: traefik.io/v1alpha1
-kind: Middleware
-metadata:
-  name: {{PROJECT_NAME}}-redirect-https
-  namespace: {{PROJECT_NAME}}
-spec:
-  redirectScheme:
-    scheme: https
-    permanent: true
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: {{PROJECT_NAME}}
-  namespace: {{PROJECT_NAME}}
-spec:
-  tls:
-    secretName: "madlabs-com-br-tls"
-    domains:
-    - main: "madlabs.com.br"
-  routes:
-  - match: Host(`madlabs.com.br`) && (PathPrefix(`/{{PROJECT_NAME}}`) || PathPrefix(`/{{PROJECT_NAME}}/`))
-    kind: Rule
-    services:
-      - name: {{PROJECT_NAME}}
-        port: 80
-    middlewares:
-      - name: {{PROJECT_NAME}}-redirect-https
