--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.25-alpine
 USER nginx
 WORKDIR /usr/share/nginx/html/{{PROJECT_NAME}}/
-COPY index.html .
+COPY ./potato/* .
 USER root
