Mod Dockerfile to Copy project directory

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:1.25-alpine
 USER nginx
-WORKDIR /usr/share/nginx/html/{{PROJECT_NAME}}/
-COPY ./potato/* .
+WORKDIR /usr/share/nginx/html
+COPY ./{{PROJECT_NAME}} .
 USER root
