--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -61,7 +61,7 @@ spec:
     app: {{PROJECT_NAME}}
 ---
 apiVersion: autoscaling/v2
-Kind: HorizontalPodAutoScaler
+Kind: HorizontalPodAutoscaler
 metadata:
   name: {{PROJECT_NAME}}
   namespace: {{BRANCH}}-{{PROJECT_NAME}}
